--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,13 @@
   font-family: Helvetica, sans-serif;
   color: #656565;
   text-align: center;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 h1, h2 {
   text-transform: uppercase;
-  /* normal, bold */
-  /* 100, 200, 300, 400, 500, 600, 700, 800, 900 */
   font-weight: 100;
   border-bottom: 2px solid;
   margin-bottom: 20px;
@@ -25,12 +26,17 @@ h2 {
   text-align: right;
 }
 
-p {
+p, footer {
   font-size: 14px;
   font-family: Georgia, serif;
   font-style: italic;
   text-align: left;
   padding: 10px;
+}
+
+.footer {
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 img {
